/*
 * Copyright (c) 2026 Adam Chen
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

package com.adam.app.tic_tac_toe.domain.entities;

import android.graphics.Point;

import androidx.annotation.NonNull;
import androidx.annotation.Nullable;

/**
 * Represents a single cell on the game board.
 */
public class Cell {

    private Player mPlayer;
    private final Point mPosition;

    public Cell(@Nullable Player player, @NonNull Point position) {
        this.mPlayer = player;
        this.mPosition = position;
    }

    @Nullable
    public Player getPlayer() {
        return mPlayer;
    }

    public Cell setPlayer(@Nullable Player player) {
        this.mPlayer = player;
        return this;
    }

    @NonNull
    public Point getPosition() {
        return mPosition;
    }
}
