/**
 * This class is the Player enum X and O for the Tic Tac Toe game.
 *
 * @author Adam Chen
 * @version 1.0
 * @since 2025-12-05
 */
package com.adam.app.tic_tac_toe.models;

public enum Player {
    X,
    O
}
